--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,6 @@
     <title>Please Recycle</title>
 </head>
 <body>
-    <h1>Reduce, Reuse, Recycle</h1>
+    <div id="root"></div>
 </body>
 </html>
